# yet-another-todo-backend

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
yet_another_todo_backend/: app.py  config.py  resources.py  utils.py
