[tool.poetry]
name = "yet-another-todo"
version = "0.1.0"
description = ""
authors = ["lrayne <legaterayne@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
pydantic-settings = "^2.9.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[tool.black]
line-length = 79
skip-string-normalization = 1

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
